@@ -11,7 +11,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -37,19 +36,11 @@ public class ProblemService {
         return problemRepository.findDetailByIdsInWithBookmark(memberId, problemIds);
     }
 
-    public List<ProblemWithBookmarkDetailQueryDto> findProblemsBySubjectId(Long memberId, List<Long> examIds, List<Long> subjectIds, int count) {
-        return subjectIds.stream()
-                .distinct()
-                .flatMap(subjectId -> {
-                    List<ProblemWithBookmarkDetailQueryDto> problems =
-                            findProblemsByExamIdsAndSubjectId(memberId, examIds, subjectId, count);
-                    Collections.shuffle(problems); // 문제 리스트를 랜덤으로 섞음
-                    return problems.stream().limit(count);
-                })
-                .toList();
-    }
-
     public List<ProblemWithBookmarkDetailQueryDto> findProblemsByExamIdAndSubjectIds(Long memberId, Long examId, List<Long> subjectIds, int count) {
+        // examId가 null일 경우 전체 시험을 대상으로 조회한다.
+        if (examId == null) {
+            return findProblemsBySubjectId(memberId, subjectIds, count);
+        }
         return subjectIds.stream()
                 .distinct()
                 .flatMap(subjectId -> {
@@ -61,12 +52,16 @@ public class ProblemService {
                 .toList();
     }
 
-    private List<ProblemWithBookmarkDetailQueryDto> findProblemsByExamIdsAndSubjectId(Long memberId, List<Long> examIds, Long subjectId, int count) {
-        return examIds.stream()
-                .flatMap(examId -> problemRepository.findDetailByExamIdAndSubjectIdWithBookmark(memberId, examId, subjectId, MAX_PROBLEM_COUNT)
-                        .stream()
-                        .limit(count))
-                .collect(Collectors.toList());
+    public List<ProblemWithBookmarkDetailQueryDto> findProblemsBySubjectId(Long memberId, List<Long> subjectIds, int count) {
+        return subjectIds.stream()
+                .distinct()
+                .flatMap(subjectId -> {
+                    List<ProblemWithBookmarkDetailQueryDto> problems =
+                            problemRepository.findDetailBySubjectIdWithBookmark(memberId, subjectId);
+                    Collections.shuffle(problems); // 문제 리스트를 랜덤으로 섞음
+                    return problems.stream().limit(count);
+                })
+                .toList();
     }
 
 }
